Fixed double scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 section {
-  padding: 100px 0;
+  padding: 50px 0 150px 0;
 }
 
 html, body {
